--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "http-proxy": "git+https://github.com/nicolayr/node-http-proxy.git",
     "isparta": "^4.0.0",
     "jsdom": "^9.0.0",
+    "lodash.isfinite": "^3.3.1",
     "loglevel": "^1.4.0",
     "material-ui": "^0.14.4",
     "mocha": "^2.4.5",
