--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react": "^0.14.7",
     "react-addons-test-utils": "^0.14.7",
     "react-dom": "^0.14.7",
+    "react-router": "^2.4.1",
     "react-tap-event-plugin": "^0.2.2",
     "sass-loader": "^3.2.0",
     "sinon": "^1.17.3",
