--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "css-loader": "^0.23.1",
     "d2": "^24.0.2",
     "d2-manifest": "^1.0.0",
-    "d2-ui": "0.0.x",
+    "d2-ui": "^24.0.9",
     "d2-utilizr": "^0.2.9",
     "enzyme": "^2.1.0",
     "eslint": "^2.4.0",
@@ -60,7 +60,7 @@
     "sinon-chai": "^2.8.0",
     "style-loader": "^0.13.0",
     "webpack": "^1.12.14",
-    "webpack-dev-server": "^1.14.1"
+    "webpack-dev-server": "~1.14.1"
   },
   "directories": {
     "test": "test"
@@ -74,8 +74,14 @@
   },
   "homepage": "https://github.com/adhbh/dhis-user-profile-app",
   "manifest.webapp": {
+    "name": "DHIS 2 User Profile Management",
     "icons": {
       "48": "icon.png"
+    },
+    "activities": {
+      "dhis": {
+        "href": ".."
+      }
     }
   }
 }
