Remove jQuery dependency

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "coverage": "babel-node node_modules/.bin/isparta cover --root ./src --report text --report html --report lcov node_modules/mocha/bin/_mocha -- --reporter dot --require config/setup.js --recursive test",
     "prebuild": "rm -rf build && mkdir build && d2-manifest package.json manifest.webapp",
     "build": "webpack",
-    "postbuild": "cp -r index.html icon.png node_modules/jquery/dist/jquery.min.js node_modules/babel-polyfill/dist/polyfill.min.js manifest.webapp i18n build/",
+    "postbuild": "cp -r index.html icon.png node_modules/babel-polyfill/dist/polyfill.min.js manifest.webapp i18n build/",
     "test": "mocha --reporter spec --compilers js:babel-core/register --require config/setup.js --recursive test",
     "test-watch": "mocha --reporter spec --compilers js:babel-core/register --require config/setup.js --recursive test --watch",
     "lint": "eslint --fix src && ./node_modules/eslint/bin/eslint.js --env node,mocha --global expect,sinon,spy,stub --rule 'no-unused-expressions: 0' test && scss-lint",
@@ -21,9 +21,7 @@
   ],
   "author": "Adheesh Bhatia",
   "license": "BSD-3-Clause",
-  "dependencies": {
-    "jquery": "^2.2.3"
-  },
+  "dependencies": {},
   "devDependencies": {
     "babel-core": "^6.7.2",
     "babel-eslint": "^6.0.4",
