--- a/package.json
+++ b/package.json
@@ -24,41 +24,42 @@
   "dependencies": {},
   "devDependencies": {
     "babel-core": "^6.7.2",
-    "babel-eslint": "^6.0.4",
-    "babel-loader": "^6.2.4",
+    "babel-eslint": "^8.0.0",
+    "babel-loader": "^7.1.1",
     "babel-polyfill": "^6.7.2",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
-    "chai": "^3.5.0",
-    "css-loader": "^0.23.1",
-    "d2": "^25.1.9",
+    "chai": "^4.1.1",
+    "css-loader": "^0.28.4",
+    "d2": "^27.0.0-8",
     "d2-manifest": "^1.0.0",
-    "d2-ui": "~25.0.3",
+    "d2-ui": "^28.0.0-0",
     "d2-utilizr": "^0.2.9",
     "enzyme": "^2.1.0",
-    "eslint": "^2.4.0",
-    "eslint-config-dhis2": "^2.0.2",
-    "eslint-plugin-react": "^4.1.0",
-    "http-proxy": "git+https://github.com/nicolayr/node-http-proxy.git",
+    "eslint": "^4.4.1",
+    "eslint-config-dhis2": "^3.0.3",
+    "eslint-plugin-react": "^7.2.0",
     "isparta": "^4.0.0",
-    "jsdom": "^9.0.0",
+    "jsdom": "^11.1.0",
     "lodash.isfinite": "^3.3.1",
     "loglevel": "^1.4.0",
-    "material-ui": "^0.14.4",
-    "mocha": "^2.4.5",
-    "node-sass": "^3.4.2",
-    "react": "^0.14.7",
-    "react-addons-test-utils": "^0.14.7",
-    "react-dom": "^0.14.7",
+    "material-ui": "^0.18.7",
+    "mocha": "^3.5.0",
+    "node-pre-gyp": "^0.6.32",
+    "node-sass": "^4.5.3",
+    "prop-types": "^15.5.10",
+    "react": "^15.6.1",
+    "react-addons-test-utils": "^15.6.0",
+    "react-dom": "^15.6.1",
     "react-router": "^2.4.1",
-    "react-tap-event-plugin": "^0.2.2",
-    "sass-loader": "^3.2.0",
-    "sinon": "^1.17.3",
+    "react-tap-event-plugin": "^2.0.1",
+    "sass-loader": "^6.0.6",
+    "sinon": "^3.2.0",
     "sinon-chai": "^2.8.0",
-    "style-loader": "^0.13.0",
-    "webpack": "^1.12.14",
-    "webpack-dev-server": "~1.14.1"
+    "style-loader": "^0.18.2",
+    "webpack": "^3.5.3",
+    "webpack-dev-server": "^2.1.0-beta.12"
   },
   "directories": {
     "test": "test"
@@ -72,7 +73,7 @@
   },
   "homepage": "https://github.com/adhbh/dhis-user-profile-app",
   "manifest.webapp": {
-    "name": "DHIS 2 User Profile Management",
+    "name": "DHIS2 User Profile Management",
     "icons": {
       "48": "icon.png"
     },
