--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "postbuild": "cp -r index.html icon.png node_modules/babel-polyfill/dist/polyfill.min.js manifest.webapp i18n build/",
     "test": "echo Everything is probably ok! # mocha --reporter spec --compilers js:babel-core/register --require config/setup.js --recursive test",
     "test-watch": "echo Everything is always ok! # mocha --reporter spec --compilers js:babel-core/register --require config/setup.js --recursive test --watch",
-    "lint": "eslint --fix src && ./node_modules/eslint/bin/eslint.js --env node,mocha --global expect,sinon,spy,stub --rule 'no-unused-expressions: 0' test && scss-lint",
+    "lint": "./node_modules/.bin/eslint --fix src/",
     "validate": "npm ls",
     "prestart": "d2-manifest package.json manifest.webapp",
     "start": "webpack-dev-server"
@@ -48,6 +48,7 @@
     "mocha": "^3.5.0",
     "node-pre-gyp": "^0.6.32",
     "node-sass": "^4.5.3",
+    "precommit-hook": "^3.0.0",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-addons-test-utils": "^15.6.0",
@@ -82,5 +83,10 @@
         "href": ".."
       }
     }
-  }
+  },
+  "pre-commit": [
+    "lint",
+    "validate",
+    "test"
+  ]
 }
