--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "postbuild": "cp -r index.html icon.png node_modules/babel-polyfill/dist/polyfill.min.js manifest.webapp i18n build/",
     "test": "echo Everything is probably ok! # mocha --reporter spec --compilers js:babel-core/register --require config/setup.js --recursive test",
     "test-watch": "echo Everything is always ok! # mocha --reporter spec --compilers js:babel-core/register --require config/setup.js --recursive test --watch",
-    "lint": "./node_modules/.bin/eslint --fix src/",
+    "lint": "eslint --fix src/",
     "validate": "npm ls",
     "prestart": "d2-manifest package.json manifest.webapp",
     "start": "webpack-dev-server"
@@ -24,43 +24,28 @@
   "dependencies": {},
   "devDependencies": {
     "babel-core": "^6.7.2",
-    "babel-eslint": "^8.0.0",
     "babel-loader": "^7.1.1",
     "babel-polyfill": "^6.7.2",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
-    "chai": "^4.1.1",
     "css-loader": "^0.28.4",
-    "d2": "^27.0.0-8",
+    "d2": "^28.2.0",
     "d2-manifest": "^1.0.0",
-    "d2-ui": "^28.0.0-0",
+    "d2-ui": "^28.0.3",
     "d2-utilizr": "^0.2.9",
-    "enzyme": "^2.1.0",
-    "eslint": "^4.4.1",
-    "eslint-config-dhis2": "^3.0.3",
-    "eslint-plugin-react": "^7.2.0",
-    "isparta": "^4.0.0",
-    "jsdom": "^11.1.0",
-    "lodash.isfinite": "^3.3.1",
+    "eslint-config-dhis2": "^3.0.7",
     "loglevel": "^1.4.0",
     "material-ui": "^0.18.7",
-    "mocha": "^3.5.0",
-    "node-pre-gyp": "^0.6.32",
-    "node-sass": "^4.5.3",
-    "precommit-hook": "^3.0.0",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
-    "react-addons-test-utils": "^15.6.0",
     "react-dom": "^15.6.1",
     "react-router": "^2.4.1",
     "react-tap-event-plugin": "^2.0.1",
-    "sass-loader": "^6.0.6",
-    "sinon": "^3.2.0",
-    "sinon-chai": "^2.8.0",
-    "style-loader": "^0.18.2",
+    "rxjs": "^5.5.0",
+    "style-loader": "^0.19.0",
     "webpack": "^3.5.3",
-    "webpack-dev-server": "^2.1.0-beta.12"
+    "webpack-dev-server": "^2.9.3"
   },
   "directories": {
     "test": "test"
@@ -83,10 +68,5 @@
         "href": ".."
       }
     }
-  },
-  "pre-commit": [
-    "lint",
-    "validate",
-    "test"
-  ]
+  }
 }
