--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
   ],
   "author": "Adheesh Bhatia",
   "license": "BSD-3-Clause",
-  "dependencies": {},
+  "dependencies": {
+    "d2-ui": "28.1.4"    
+  },
   "devDependencies": {
     "babel-core": "^6.7.2",
     "babel-loader": "^7.1.1",
@@ -32,7 +34,6 @@
     "css-loader": "^0.28.4",
     "d2": "^28.2.0",
     "d2-manifest": "^1.0.0",
-    "d2-ui": "^28.0.3",
     "d2-utilizr": "^0.2.9",
     "eslint-config-dhis2": "^3.0.7",
     "loglevel": "^1.4.0",
