--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   "author": "Adheesh Bhatia",
   "license": "BSD-3-Clause",
   "dependencies": {
-    "d2-ui": "28.1.4"    
+    "d2-ui": "29.0.5",
+    "eslint-config-dhis2": "^3.0.7"
   },
   "devDependencies": {
     "babel-core": "^6.7.2",
@@ -35,7 +36,6 @@
     "d2": "^28.2.0",
     "d2-manifest": "^1.0.0",
     "d2-utilizr": "^0.2.9",
-    "eslint-config-dhis2": "^3.0.7",
     "loglevel": "^1.4.0",
     "material-ui": "^0.18.7",
     "prop-types": "^15.5.10",
