--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "coverage": "babel-node node_modules/.bin/isparta cover --root ./src --report text --report html --report lcov node_modules/mocha/bin/_mocha -- --reporter dot --require config/setup.js --recursive test",
         "prebuild": "rm -rf build && mkdir build && d2-manifest package.json manifest.webapp",
         "build": "webpack",
-        "postbuild": "cp -r index.html icon.png auth.png node_modules/babel-polyfill/dist/polyfill.min.js manifest.webapp i18n build/",
+        "postbuild": "cp -r package.json index.html icon.png auth.png node_modules/babel-polyfill/dist/polyfill.min.js manifest.webapp i18n build/",
         "test": "echo Everything is probably ok! # mocha --reporter spec --compilers js:babel-core/register --require config/setup.js --recursive test",
         "test-watch": "echo Everything is always ok! # mocha --reporter spec --compilers js:babel-core/register --require config/setup.js --recursive test --watch",
         "lint": "eslint --fix src/",
@@ -22,35 +22,28 @@
     "author": "Adheesh Bhatia",
     "license": "BSD-3-Clause",
     "dependencies": {
-        "@dhis2/d2-ui-header-bar": "^1.1.1",
         "d2": "^30.0.0",
         "d2-ui": "29.0.5",
-        "material-ui": "^0.20.0",
+        "eslint-config-dhis2": "^3.0.7",
+        "material-ui": "^0.18.7",
         "prop-types": "^15.5.10",
-        "react": "^16.3.0",
-        "react-dom": "^16.2.0",
-        "react-router": "^3.2.1",
-        "rxjs": "^5.5.7"
+        "react": "^15.6.1",
+        "react-dom": "^15.6.1",
+        "react-router": "^2.4.1",
+        "react-tap-event-plugin": "^2.0.1",
+        "rxjs": "^5.5.0"
     },
     "devDependencies": {
-        "babel-core": "^6.26.0",
-        "babel-loader": "^7.1.4",
-        "babel-polyfill": "^6.26.0",
-        "babel-preset-env": "^1.6.1",
-        "babel-preset-es2015": "^6.24.1",
-        "babel-preset-react": "^6.24.1",
-        "babel-preset-stage-0": "^6.24.1",
+        "babel-core": "^6.7.2",
+        "babel-loader": "^7.1.1",
+        "babel-polyfill": "^6.7.2",
+        "babel-preset-es2015": "^6.6.0",
+        "babel-preset-react": "^6.5.0",
+        "babel-preset-stage-0": "^6.5.0",
         "css-loader": "^0.28.4",
         "d2-manifest": "^1.0.0",
         "d2-utilizr": "^0.2.9",
-        "eslint": "^5.6.0",
-        "eslint-config-react-app": "^2.1.0",
-        "eslint-plugin-flowtype": "^2.34.1",
-        "eslint-plugin-import": "^2.6.0",
-        "eslint-plugin-jsx-a11y": "^6.1.1",
-        "eslint-plugin-react": "^7.1.0",
         "loglevel": "^1.4.0",
-        "prettier": "^1.14.3",
         "style-loader": "^0.19.0",
         "webpack": "^3.5.3",
         "webpack-dev-server": "^2.9.3"
@@ -60,12 +53,12 @@
     },
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/adhbh/dhis-user-profile-app.git"
+        "url": "git+https://github.com/dhis2/dhis-user-profile-app.git"
     },
     "bugs": {
-        "url": "https://github.com/adhbh/dhis-user-profile-app/issues"
+        "url": "https://github.com/dhis2/dhis-user-profile-app/issues"
     },
-    "homepage": "https://github.com/adhbh/dhis-user-profile-app",
+    "homepage": "https://github.com/dhis2/dhis-user-profile-app",
     "manifest.webapp": {
         "name": "DHIS2 User Profile Management",
         "dhis2": {
