--- a/package.json
+++ b/package.json
@@ -1,76 +1,76 @@
 {
-  "name": "user-profile-app",
-  "version": "31.0.0",
-  "description": "User Profile App for DHIS2",
-  "main": "src/index.html",
-  "scripts": {
-    "coverage": "babel-node node_modules/.bin/isparta cover --root ./src --report text --report html --report lcov node_modules/mocha/bin/_mocha -- --reporter dot --require config/setup.js --recursive test",
-    "prebuild": "rm -rf build && mkdir build && d2-manifest package.json manifest.webapp",
-    "build": "webpack",
-    "postbuild": "cp -r index.html icon.png auth.png node_modules/babel-polyfill/dist/polyfill.min.js manifest.webapp i18n build/",
-    "test": "echo Everything is probably ok! # mocha --reporter spec --compilers js:babel-core/register --require config/setup.js --recursive test",
-    "test-watch": "echo Everything is always ok! # mocha --reporter spec --compilers js:babel-core/register --require config/setup.js --recursive test --watch",
-    "lint": "eslint --fix src/",
-    "validate": "npm ls",
-    "prestart": "d2-manifest package.json manifest.webapp",
-    "start": "webpack-dev-server"
-  },
-  "keywords": [
-    "DHIS2",
-    "App"
-  ],
-  "author": "Adheesh Bhatia",
-  "license": "BSD-3-Clause",
-  "dependencies": {
-    "d2": "^30.0.0",
-    "d2-ui": "29.0.5",
-    "eslint-config-dhis2": "^3.0.7",
-    "material-ui": "^0.18.7",
-    "prop-types": "^15.5.10",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
-    "react-router": "^2.4.1",
-    "react-tap-event-plugin": "^2.0.1",
-    "rxjs": "^5.5.0"
-  },
-  "devDependencies": {
-    "babel-core": "^6.7.2",
-    "babel-loader": "^7.1.1",
-    "babel-polyfill": "^6.7.2",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-react": "^6.5.0",
-    "babel-preset-stage-0": "^6.5.0",
-    "css-loader": "^0.28.4",
-    "d2-manifest": "^1.0.0",
-    "d2-utilizr": "^0.2.9",
-    "loglevel": "^1.4.0",
-    "style-loader": "^0.19.0",
-    "webpack": "^3.5.3",
-    "webpack-dev-server": "^2.9.3"
-  },
-  "directories": {
-    "test": "test"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/adhbh/dhis-user-profile-app.git"
-  },
-  "bugs": {
-    "url": "https://github.com/adhbh/dhis-user-profile-app/issues"
-  },
-  "homepage": "https://github.com/adhbh/dhis-user-profile-app",
-  "manifest.webapp": {
-    "name": "DHIS2 User Profile Management",
-    "dhis2": {
-      "apiVersion": "31"
+    "name": "user-profile-app",
+    "version": "31.0.0",
+    "description": "User Profile App for DHIS2",
+    "main": "src/index.html",
+    "scripts": {
+        "coverage": "babel-node node_modules/.bin/isparta cover --root ./src --report text --report html --report lcov node_modules/mocha/bin/_mocha -- --reporter dot --require config/setup.js --recursive test",
+        "prebuild": "rm -rf build && mkdir build && d2-manifest package.json manifest.webapp",
+        "build": "webpack",
+        "postbuild": "cp -r index.html icon.png auth.png node_modules/babel-polyfill/dist/polyfill.min.js manifest.webapp i18n build/",
+        "test": "echo Everything is probably ok! # mocha --reporter spec --compilers js:babel-core/register --require config/setup.js --recursive test",
+        "test-watch": "echo Everything is always ok! # mocha --reporter spec --compilers js:babel-core/register --require config/setup.js --recursive test --watch",
+        "lint": "eslint --fix src/",
+        "validate": "npm ls",
+        "prestart": "d2-manifest package.json manifest.webapp",
+        "start": "webpack-dev-server"
     },
-    "icons": {
-      "48": "icon.png"
+    "keywords": [
+        "DHIS2",
+        "App"
+    ],
+    "author": "Adheesh Bhatia",
+    "license": "BSD-3-Clause",
+    "dependencies": {
+        "@dhis2/d2-ui-header-bar": "^1.1.1",
+        "d2": "^30.0.0",
+        "d2-ui": "29.0.5",
+        "eslint-config-dhis2": "^3.0.7",
+        "material-ui": "^0.20.0",
+        "prop-types": "^15.5.10",
+        "react": "^16.3.0",
+        "react-dom": "^16.2.0",
+        "react-router": "^3.2.1",
+        "rxjs": "^5.5.7"
     },
-    "activities": {
-      "dhis": {
-        "href": ".."
-      }
+    "devDependencies": {
+        "babel-core": "^6.7.2",
+        "babel-loader": "^7.1.1",
+        "babel-polyfill": "^6.7.2",
+        "babel-preset-es2015": "^6.6.0",
+        "babel-preset-react": "^6.5.0",
+        "babel-preset-stage-0": "^6.5.0",
+        "css-loader": "^0.28.4",
+        "d2-manifest": "^1.0.0",
+        "d2-utilizr": "^0.2.9",
+        "loglevel": "^1.4.0",
+        "style-loader": "^0.19.0",
+        "webpack": "^3.5.3",
+        "webpack-dev-server": "^2.9.3"
+    },
+    "directories": {
+        "test": "test"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/adhbh/dhis-user-profile-app.git"
+    },
+    "bugs": {
+        "url": "https://github.com/adhbh/dhis-user-profile-app/issues"
+    },
+    "homepage": "https://github.com/adhbh/dhis-user-profile-app",
+    "manifest.webapp": {
+        "name": "DHIS2 User Profile Management",
+        "dhis2": {
+            "apiVersion": "31"
+        },
+        "icons": {
+            "48": "icon.png"
+        },
+        "activities": {
+            "dhis": {
+                "href": ".."
+            }
+        }
     }
-  }
 }
