--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,17 @@
 {
-  "extends": "dhis2"
+    "extends": "react-app",
+    "env": {
+        "browser": true
+    },
+    "rules": {
+        "react/prop-types": [1],
+        "no-unused-vars": [
+            "warn",
+            {
+                "vars": "all",
+                "args": "after-used",
+                "ignoreRestSiblings": true
+            }
+        ]
+    }
 }
