--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
         "@dhis2/d2-ui-header-bar": "^1.1.1",
         "d2": "^30.0.0",
         "d2-ui": "29.0.5",
-        "eslint-config-dhis2": "^3.0.7",
         "material-ui": "^0.20.0",
         "prop-types": "^15.5.10",
         "react": "^16.3.0",
@@ -34,16 +33,24 @@
         "rxjs": "^5.5.7"
     },
     "devDependencies": {
-        "babel-core": "^6.7.2",
-        "babel-loader": "^7.1.1",
-        "babel-polyfill": "^6.7.2",
-        "babel-preset-es2015": "^6.6.0",
-        "babel-preset-react": "^6.5.0",
-        "babel-preset-stage-0": "^6.5.0",
+        "babel-core": "^6.26.0",
+        "babel-loader": "^7.1.4",
+        "babel-polyfill": "^6.26.0",
+        "babel-preset-env": "^1.6.1",
+        "babel-preset-es2015": "^6.24.1",
+        "babel-preset-react": "^6.24.1",
+        "babel-preset-stage-0": "^6.24.1",
         "css-loader": "^0.28.4",
         "d2-manifest": "^1.0.0",
         "d2-utilizr": "^0.2.9",
+        "eslint": "^5.6.0",
+        "eslint-config-react-app": "^2.1.0",
+        "eslint-plugin-flowtype": "^2.34.1",
+        "eslint-plugin-import": "^2.6.0",
+        "eslint-plugin-jsx-a11y": "^6.1.1",
+        "eslint-plugin-react": "^7.1.0",
         "loglevel": "^1.4.0",
+        "prettier": "^1.14.3",
         "style-loader": "^0.19.0",
         "webpack": "^3.5.3",
         "webpack-dev-server": "^2.9.3"
