Adds whatsApp validation and fixes linting

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     },
     "devDependencies": {
         "babel-core": "^6.26.0",
+        "babel-eslint": "^7.2.3",
         "babel-loader": "^7.1.4",
         "babel-polyfill": "^6.26.0",
         "babel-preset-env": "^1.6.1",
@@ -43,11 +44,11 @@
         "css-loader": "^0.28.4",
         "d2-manifest": "^1.0.0",
         "d2-utilizr": "^0.2.9",
-        "eslint": "^5.6.0",
+        "eslint": "^4.1.1",
         "eslint-config-react-app": "^2.1.0",
         "eslint-plugin-flowtype": "^2.34.1",
         "eslint-plugin-import": "^2.6.0",
-        "eslint-plugin-jsx-a11y": "^6.1.1",
+        "eslint-plugin-jsx-a11y": "^5.1.1",
         "eslint-plugin-react": "^7.1.0",
         "loglevel": "^1.4.0",
         "prettier": "^1.14.3",
