chore: remove package.json copy to build

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "coverage": "babel-node node_modules/.bin/isparta cover --root ./src --report text --report html --report lcov node_modules/mocha/bin/_mocha -- --reporter dot --require config/setup.js --recursive test",
         "prebuild": "rm -rf build && mkdir build && d2-manifest package.json manifest.webapp",
         "build": "webpack",
-        "postbuild": "cp -r package.json index.html icon.png auth.png node_modules/babel-polyfill/dist/polyfill.min.js manifest.webapp i18n build/",
+        "postbuild": "cp -r index.html icon.png auth.png node_modules/babel-polyfill/dist/polyfill.min.js manifest.webapp i18n build/",
         "test": "echo Everything is probably ok! # mocha --reporter spec --compilers js:babel-core/register --require config/setup.js --recursive test",
         "test-watch": "echo Everything is always ok! # mocha --reporter spec --compilers js:babel-core/register --require config/setup.js --recursive test --watch",
         "lint": "eslint --fix src/",
