--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,15 @@
 {
-    "presets": ["es2015", "react", "stage-0"]
+    "presets": [
+        "@babel/react",
+        [
+            "@babel/preset-env",
+            {
+                "modules": false
+            }
+        ]
+    ],
+    "plugins": [
+        "@babel/plugin-proposal-class-properties",
+        "@babel/plugin-transform-runtime"
+    ]
 }
