--- a/package.json
+++ b/package.json
@@ -22,25 +22,29 @@
     "author": "Adheesh Bhatia",
     "license": "BSD-3-Clause",
     "dependencies": {
-        "@dhis2/d2-ui-header-bar": "^1.1.1",
+        "@dhis2/app-runtime": "^2.0.4",
+        "@dhis2/ui-widgets": "^5.0.1",
         "d2": "^30.0.0",
         "d2-ui": "^29.0.29",
         "material-ui": "^0.20.0",
         "prop-types": "^15.5.10",
-        "react": "^16.3.0",
-        "react-dom": "^16.2.0",
+        "react": "^16.13.0",
+        "react-dom": "^16.13.0",
         "react-router": "^3.2.1",
-        "rxjs": "^5.5.7"
+        "rxjs": "^5.5.7",
+        "styled-jsx": "^3.3.0"
     },
     "devDependencies": {
-        "babel-core": "^6.26.0",
-        "babel-eslint": "^7.2.3",
-        "babel-loader": "^7.1.4",
-        "babel-polyfill": "^6.26.0",
-        "babel-preset-env": "^1.6.1",
-        "babel-preset-es2015": "^6.24.1",
-        "babel-preset-react": "^6.24.1",
-        "babel-preset-stage-0": "^6.24.1",
+        "@babel/core": "^7.2.2",
+        "@babel/plugin-proposal-class-properties": "^7.2.3",
+        "@babel/plugin-transform-runtime": "^7.2.0",
+        "@babel/preset-env": "^7.2.3",
+        "@babel/preset-react": "^7.0.0",
+        "@babel/runtime": "7.3.4",
+        "@dhis2/cli-style": "^2.2.2",
+        "babel-eslint": "^10.0.1",
+        "babel-loader": "^8.0.5",
+        "cross-env": "^5.2.0",
         "css-loader": "^0.28.4",
         "d2-manifest": "^1.0.0",
         "d2-utilizr": "^0.2.9",
@@ -53,8 +57,9 @@
         "loglevel": "^1.4.0",
         "prettier": "^1.14.3",
         "style-loader": "^0.19.0",
-        "webpack": "^3.5.3",
-        "webpack-dev-server": "^2.9.3"
+        "webpack": "^4.29.6",
+        "webpack-cli": "^3.2.3",
+        "webpack-dev-server": "^3.2.1"
     },
     "directories": {
         "test": "test"
