--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dependencies": {
         "@dhis2/app-runtime": "^2.0.4",
         "@dhis2/ui-widgets": "^5.0.1",
+        "babel-polyfill": "^6.26.0",
         "d2": "^30.0.0",
         "d2-ui": "^29.0.29",
         "material-ui": "^0.20.0",
