--- a/package.json
+++ b/package.json
@@ -22,8 +22,9 @@
     "author": "Adheesh Bhatia",
     "license": "BSD-3-Clause",
     "dependencies": {
-        "@dhis2/app-runtime": "^2.0.4",
-        "@dhis2/ui-widgets": "^5.0.1",
+        "@dhis2/app-runtime": "^2.8.0",
+        "@dhis2/d2-i18n": "^1.1.0",
+        "@dhis2/ui": "^6.5.5",
         "babel-polyfill": "^6.26.0",
         "d2": "^30.0.0",
         "d2-ui": "^29.0.29",
