--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
     "version": "31.0.0",
     "description": "User Profile App for DHIS2",
     "license": "BSD-3-Clause",
-    "private": true,
     "scripts": {
         "build": "d2-app-scripts build",
         "start": "d2-app-scripts start",
@@ -29,5 +28,21 @@
         "material-ui": "^0.20.0",
         "react-router": "^3.2.1",
         "rxjs": "^5.5.7"
-    }
+    },
+    "keywords": [
+        "DHIS2",
+        "App"
+    ],
+    "author": "Adheesh Bhatia",
+    "directories": {
+        "test": "test"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/dhis2/user-profile-app.git"
+    },
+    "bugs": {
+        "url": "https://github.com/dhis2/user-profile-app/issues"
+    },
+    "homepage": "https://github.com/dhis2/user-profile-app"
 }
