chore: skip tests if there are none

--- a/.github/workflows/dhis2-verify-app.yml
+++ b/.github/workflows/dhis2-verify-app.yml
@@ -102,7 +102,7 @@ jobs:
               run: yarn d2-app-scripts i18n generate
 
             - name: Test
-              run: yarn test
+              run: yarn test --passWithNoTests
 
     #e2e:
     #    runs-on: ubuntu-latest
