--- a/.github/workflows/dhis2-verify-app.yml
+++ b/.github/workflows/dhis2-verify-app.yml
@@ -82,27 +82,27 @@ jobs:
             - name: Lint
               run: yarn lint
 
-    test:
-        runs-on: ubuntu-latest
-        needs: install
-        if: "!contains(github.event.head_commit.message, '[skip ci]')"
-        steps:
-            - uses: actions/checkout@v2
-            - uses: actions/setup-node@v1
-              with:
-                  node-version: 12.x
+    # test:
+    #     runs-on: ubuntu-latest
+    #     needs: install
+    #     if: "!contains(github.event.head_commit.message, '[skip ci]')"
+    #     steps:
+    #         - uses: actions/checkout@v2
+    #         - uses: actions/setup-node@v1
+    #           with:
+    #               node-version: 12.x
 
-            - uses: actions/cache@v2
-              id: yarn-cache
-              with:
-                  path: '**/node_modules'
-                  key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+    #         - uses: actions/cache@v2
+    #           id: yarn-cache
+    #           with:
+    #               path: '**/node_modules'
+    #               key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
 
-            - name: Generate translations
-              run: yarn d2-app-scripts i18n generate
+    #         - name: Generate translations
+    #           run: yarn d2-app-scripts i18n generate
 
-            - name: Test
-              run: yarn test --passWithNoTests
+    #         - name: Test
+    #           run: yarn test --passWithNoTests
 
     #e2e:
     #    runs-on: ubuntu-latest
