--- a/.github/workflows/dhis2-verify-app.yml
+++ b/.github/workflows/dhis2-verify-app.yml
@@ -151,7 +151,7 @@ jobs:
 
     publish:
         runs-on: ubuntu-latest
-        needs: [build, lint] # add e2e or test if you use it
+        needs: [build, lint] # add e2e and/or test if you use it
         if: "!contains(github.event.head_commit.message, '[skip ci]')"
         steps:
             - uses: actions/checkout@v2
@@ -170,7 +170,7 @@ jobs:
               with:
                   # uncomment following line for monorepo apps:
                   #cwd: ./packages/app
-                  build-dir: build
+                  build-dir: build/app
                   github-token: ${{ env.GH_TOKEN }}
 
     release:
