--- a/package.json
+++ b/package.json
@@ -8,18 +8,14 @@
         "start": "d2-app-scripts start",
         "test": "d2-app-scripts test",
         "deploy": "d2-app-scripts deploy",
-        "lint:js": "d2-style js check",
-        "lint:text": "d2-style text check",
-        "lint:staged": "yarn lint:js --staged && yarn lint:text --staged",
-        "lint": "yarn lint:js && yarn lint:text",
-        "format:js": "d2-style js apply",
-        "format:text": "d2-style text apply",
-        "format:staged": "yarn format:js --staged && yarn format:text --staged",
-        "format": "d2-style js apply && d2-style text apply"
+        "lint:staged": "yarn lint --staged",
+        "lint": "d2-style check",
+        "format:staged": "yarn format --staged",
+        "format": "d2-style apply"
     },
     "devDependencies": {
         "@dhis2/cli-app-scripts": "^6.0.0",
-        "@dhis2/cli-style": "^7.3.0"
+        "@dhis2/cli-style": "^8.0.0"
     },
     "dependencies": {
         "@dhis2/app-runtime": "^2.8.0",
