--- a/package.json
+++ b/package.json
@@ -25,10 +25,11 @@
         "@dhis2/app-runtime": "^2.8.0",
         "@dhis2/app-runtime-adapter-d2": "^1.0.2",
         "@dhis2/d2-i18n": "^1.1.0",
-        "@dhis2/ui": "^6.5.5",
+        "@dhis2/ui": "^6.18.1",
         "babel-polyfill": "^6.26.0",
         "d2": "^31.9.0",
         "d2-ui": "^29.0.35",
+        "ip-regex": "^4.3.0",
         "loglevel": "^1.7.1",
         "material-design-icons-iconfont": "^6.1.0",
         "material-ui": "^0.20.0",
