ci: fix lint script

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "start": "d2-app-scripts start",
         "test": "d2-app-scripts test",
         "deploy": "d2-app-scripts deploy",
-        "lint:js": "d2-style js check",
+        "lint:js": "d2-style check js",
         "lint:text": "d2-style text check",
         "lint:staged": "yarn lint:js --staged && yarn lint:text --staged",
         "lint": "yarn lint:js && yarn lint:text",
