--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
         "test": "d2-app-scripts test",
         "deploy": "d2-app-scripts deploy",
         "lint:js": "d2-style check js",
-        "lint:text": "d2-style text check",
+        "lint:text": "d2-style check text",
         "lint:staged": "yarn lint:js --staged && yarn lint:text --staged",
         "lint": "yarn lint:js && yarn lint:text",
-        "format:js": "d2-style js apply",
-        "format:text": "d2-style text apply",
+        "format:js": "d2-style apply js",
+        "format:text": "d2-style apply text",
         "format:staged": "yarn format:js --staged && yarn format:text --staged",
-        "format": "d2-style js apply && d2-style text apply"
+        "format": "d2-style apply js && d2-style apply text"
     },
     "devDependencies": {
         "@dhis2/cli-app-scripts": "^6.0.0",
