--- a/.github/workflows/dhis2-verify-app.yml
+++ b/.github/workflows/dhis2-verify-app.yml
@@ -1,56 +1,41 @@
 name: 'dhis2: verify (app)'
 
-on:
-    push:
-        branches:
+# Requirements:
+#
+# - Org secrets:
+#       DHIS2_BOT_GITHUB_TOKEN
+#       DHIS2_BOT_APPHUB_TOKEN
+# - Enable the 'jobs.e2e' section if applicable
+# - Customize the properties if needed:
+#       'jobs.release.steps.*.cwd'
+#       'jobs.release.steps.*.build-dir'
+
+on: push
+
+concurrency:
+    group: ${{ github.workflow}}-${{ github.ref }}
 
 env:
     GIT_AUTHOR_NAME: '@dhis2-bot'
     GIT_AUTHOR_EMAIL: 'apps@dhis2.org'
     GIT_COMMITTER_NAME: '@dhis2-bot'
     GIT_COMMITTER_EMAIL: 'apps@dhis2.org'
-    GH_TOKEN: ${{secrets.DHIS2_BOT_GITHUB_TOKEN}}
-    CI: true
+    D2_VERBOSE: true
 
 jobs:
-    install:
-        runs-on: ubuntu-latest
-        if: "!contains(github.event.head_commit.message, '[skip ci]')"
-
-        steps:
-            - uses: actions/checkout@v2
-            - uses: actions/setup-node@v1
-              with:
-                  node-version: 16.x
-
-            - uses: actions/cache@v2
-              id: yarn-cache # use this to check for `cache-hit` (`steps.yarn-cache.outputs.cache-hit != 'true'`)
-              with:
-                  path: '**/node_modules'
-                  key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-
-            - name: Install
-              if: steps.yarn-cache.outputs.cache-hit != 'true'
-              run: yarn install --frozen-lockfile
-
     build:
         runs-on: ubuntu-latest
-        needs: install
-        if: "!contains(github.event.head_commit.message, '[skip ci]')"
         steps:
             - uses: actions/checkout@v2
-            - uses: actions/setup-node@v1
+            - uses: actions/setup-node@v3
               with:
-                  node-version: 16.x
+                  node-version: 16
+                  cache: 'yarn'
 
-            - uses: actions/cache@v2
-              id: yarn-cache
-              with:
-                  path: '**/node_modules'
-                  key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+            - run: yarn install --frozen-lockfile
 
             - name: Build
-              run: yarn build
+              run: yarn d2-app-scripts build
 
             - uses: actions/upload-artifact@v2
               with:
@@ -62,129 +47,108 @@ jobs:
 
     lint:
         runs-on: ubuntu-latest
-        needs: install
-        if: "!contains(github.event.head_commit.message, '[skip ci]')"
         steps:
             - uses: actions/checkout@v2
-            - uses: actions/setup-node@v1
+            - uses: actions/setup-node@v3
               with:
-                  node-version: 16.x
+                  node-version: 16
+                  cache: 'yarn'
 
-            - uses: actions/cache@v2
-              id: yarn-cache
-              with:
-                  path: '**/node_modules'
-                  key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+            - run: yarn install --frozen-lockfile
 
+            # Can be removed if translations aren't required for tests,
+            # or if not using the App Platform
             - name: Generate translations
               run: yarn d2-app-scripts i18n generate
 
             - name: Lint
-              run: yarn lint
+              run: yarn d2-style check
 
-    # test:
-    #     runs-on: ubuntu-latest
-    #     needs: install
-    #     if: "!contains(github.event.head_commit.message, '[skip ci]')"
-    #     steps:
-    #         - uses: actions/checkout@v2
-    #         - uses: actions/setup-node@v1
-    #           with:
-    #               node-version: 16.x
+    test:
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v2
+            - uses: actions/setup-node@v3
+              with:
+                  node-version: 16
+                  cache: 'yarn'
 
-    #         - uses: actions/cache@v2
-    #           id: yarn-cache
-    #           with:
-    #               path: '**/node_modules'
-    #               key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+            - run: yarn install --frozen-lockfile
 
-    #         - name: Generate translations
-    #           run: yarn d2-app-scripts i18n generate
+            # Can be removed if translations aren't required for tests,
+            # or if not using the App Platform
+            - name: Generate translations
+              run: yarn d2-app-scripts i18n generate
 
-    #         - name: Test
-    #           run: yarn test --passWithNoTests
+            - name: Test
+              run: yarn d2-app-scripts test
 
     #e2e:
     #    runs-on: ubuntu-latest
-    #    if: "!contains(github.event.head_commit.message, '[skip ci]')"
-    #    needs: [install]
+    #    if: "!github.event.push.repository.fork && github.actor != 'dependabot[bot]'"
     #
     #    strategy:
+    #        fail-fast: false
     #        matrix:
-    #            containers: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
+    #            containers: [1, 2, 3, 4]
     #
     #    steps:
     #        - name: Checkout
     #          uses: actions/checkout@v2
     #
-    #        - uses: actions/setup-node@v1
+    #        - uses: actions/setup-node@v3
     #          with:
-    #              node-version: 16.x
-    #
-    #        - uses: actions/cache@v2
-    #          id: yarn-cache
-    #          with:
-    #              path: '**/node_modules'
-    #              key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-    #
-    #        - name: Install Cypress binary
-    #          run: yarn cypress install
+    #              node-version: 16
+    #              cache: 'yarn'
     #
     #        - name: End-to-End tests
     #          uses: cypress-io/github-action@v2
     #          with:
-    #              install: false
+    #              # This should be a command that serves the app.
+    #              start: yarn d2-app-scripts start
+    #              wait-on: 'http://localhost:3000'
+    #              wait-on-timeout: 300
     #              record: true
     #              parallel: true
-    #              start: ${{ env.SERVER_START_CMD }}
-    #              wait-on: ${{ env.SERVER_URL }}
-    #              wait-on-timeout: 300
-    #              cache-key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-    #              group: 'e2e'
-    #              tag: ${{ github.event_name }}
     #          env:
+    #              BROWSER: none
+    #              GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     #              CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
-    #              COMMIT_INFO_MESSAGE: ${{ github.event.pull_request.title }}
-    #              STORYBOOK_TESTING: true
-    #              SERVER_START_CMD: 'yarn cy:server'
-    #              SERVER_URL: 'http://localhost:5001'
+    #              CYPRESS_dhis2BaseUrl: https://debug.dhis2.org/dev
+    #              CYPRESS_dhis2ApiVersion: 37
+    #              CYPRESS_networkMode: stub
 
-    publish:
+    release:
         runs-on: ubuntu-latest
-        needs: [build, lint] # add e2e and/or test if you use it
-        if: "!contains(github.event.head_commit.message, '[skip ci]')"
+        needs: [build, lint, test] # add e2e if you use it
+        if: "!github.event.push.repository.fork && github.actor != 'dependabot[bot]'"
         steps:
             - uses: actions/checkout@v2
               with:
-                  token: ${{env.GH_TOKEN}}
+                  token: ${{ secrets.DHIS2_BOT_GITHUB_TOKEN }}
 
-            - uses: actions/setup-node@v1
+            - uses: actions/setup-node@v3
               with:
-                  node-version: 16.x
+                  node-version: 16
+                  cache: 'yarn'
 
             - uses: actions/download-artifact@v2
               with:
                   name: app-build
+
+            # ensure that d2-app-scripts is available
+            - run: yarn install --frozen-lockfile
+
+            - uses: dhis2/action-semantic-release@master
+              with:
+                  publish-apphub: true
+                  publish-github: true
+                  github-token: ${{ secrets.DHIS2_BOT_GITHUB_TOKEN }}
+                  apphub-token: ${{ secrets.DHIS2_BOT_APPHUB_TOKEN }}
 
             - uses: dhis2/deploy-build@master
               with:
                   # uncomment following line for monorepo apps:
                   #cwd: ./packages/app
                   build-dir: build/app
-                  github-token: ${{ env.GH_TOKEN }}
-
-    release:
-        runs-on: ubuntu-latest
-        needs: [publish]
-        if: "github.event_name == 'push' && !contains(github.event.head_commit.message, '[skip ci]')"
-        steps:
-            - uses: actions/checkout@v2
-              with:
-                  token: ${{env.GH_TOKEN}}
-
-            - uses: actions/setup-node@v1
-              with:
-                  node-version: 16.x
-
-            - name: Publish release to GitHub
-              run: npx @dhis2/cli-utils release
+                  github-token: ${{ secrets.DHIS2_BOT_GITHUB_TOKEN }}
